--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,10 +1,10 @@
-name: dirst workflow
+name: first workflow
 on: workflow_dispatch
 jobs:
   first-job:
-    runs-on: ubuntu-linux
+    runs-on: ubuntu-latest
     steps:
       - name: Print greeting
-      run: echo "Hello World"
+        run: echo "Hello World"
       - name: Print goodbye
-      run: echo "Done - bye!"
+        run: echo "Done - bye!"
